--- a/style.css
+++ b/style.css
@@ -39,9 +39,13 @@ body {
 }
 
 .header-cross {
-    color: var(--text-color);
+    /* color: var(--text-color); */
     /* padding-left: 1.5rem; */
 }
+
+/* .header-cross:hover {
+    color: rgba(0, 255, 255, 0.8);
+} */
 
 .header-playlist-name {
     color: var(--text-color);
