--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body {
 .progress-bar-value {
     width: 1px;
     height: 100%;
-    transition: width .5s ease;
+    transition: width 1s ease;
     background-color: red;
 }
 
