--- a/style.css
+++ b/style.css
@@ -168,9 +168,18 @@ body {
 
 
 
+.list-btn[disabled] {
+    opacity: 0.5;
+}
+
 @media screen and (min-width: 1024px) {
     .list-btn:hover {
         background-color: rgba(255, 255, 255, 0.6);
         transition: background-color 150ms ease-in-out;
+    }
+
+    .list-btn[disabled]:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+        cursor: not-allowed;
     }
 }
