--- a/home_style.css
+++ b/home_style.css
@@ -1,10 +1,190 @@
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Bold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Italic.ttf") format("truetype");
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-BoldItalic.ttf") format("truetype");
+    font-weight: bold;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Black.ttf") format("truetype");
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: url(fonts/Lato-Regular.ttf) format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 :root {
     color: #FFFFFF;
     --background-color: #101728;
+    --blue: rgba(55, 62, 230, 0.58);
+
 }
 
+/* RESET CSS */
+h1, h2, h3, h4, h5, h6, ul, li, a, p {
+    list-style-type: none;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+html {
+    box-sizing: border-box;
+}
 
 body {
     background-color: var(--background-color);
+    font-family: "Nunito";
+    margin: 0;
 }
 
+
+/*   Utilities  */
+
+.container {
+    max-width: 300px;  /*revoir la taille pour avoir quelque chose en tablette*/
+    outline: 1px solid red;
+    margin: 0 auto;
+}
+
+
+/* Header */
+
+.header {
+    padding: 0.75rem 0.5rem;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.12) 100%);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
+.header__brand {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+
+}
+.header__brand__img {
+    width: 60px;
+}
+
+.header__brand__title {
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.4rem;
+}
+
+.header__nav {
+    display: flex;
+    gap: 1rem;
+    font-size: 1rem;
+}
+
+.header__nav__itm {
+    display: none;
+}
+
+
+
+
+/*   */
+
+.block__section__list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+.block__section__title {
+    text-transform: uppercase;
+}
+
+.block__section__list__itm--wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.block__section__list__itm__title {
+    font-size: 4.8rem;
+    /* font-family: Lato; */
+    margin-top: 1.8rem;
+    margin-bottom: 1rem;
+}
+
+/* .block__section__list__itm_label {
+
+} */
+
+
+.tile {
+    height: 100px;    /*revoir la taille en fonction du parent, pour avoir quelque chose en tablette*/
+    width: 235px;
+    overflow: hidden;
+    background: var(--blue);
+    border-radius: .75rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+}
+
+
+
+.tile__right {
+    /* width: 50%; */
+    /* height: 100%; */
+    display: flex;
+    gap: 0.4rem;
+    /* background: rgba(0, 0, 0, 0.2); */
+}
+
+/* .tile__right--layer::after {
+    content: '';
+    background: rgba(0, 0, 0, 0.2);
+    height: 100%;
+} */
+.tile__right__content {
+    display: flex;
+    flex-direction: column;
+    font-size: .75rem; 
+    /* justify-content: s; */
+}
+
+
+.tile__label {
+    font-size: 1.5rem;
+    font-family: "Lato"; /*à vérifier*/
+    text-align: center;
+    /* margin: .5rem; */
+}
