--- a/home_style.css
+++ b/home_style.css
@@ -41,6 +41,8 @@
     color: #FFFFFF;
     --background-color: #101728;
     --blue: rgba(55, 62, 230, 0.58);
+    --magenta-pink: rgba(207, 62, 166, 1);
+    --yellow-amber: rgba(255, 190, 11, 1);
 
 }
 
@@ -53,7 +55,7 @@ h1, h2, h3, h4, h5, h6, ul, li, a, p {
 }
 
 
-html {
+* {
     box-sizing: border-box;
 }
 
@@ -67,10 +69,27 @@ body {
 /*   Utilities  */
 
 .container {
-    max-width: 300px;  /*revoir la taille pour avoir quelque chose en tablette*/
+    max-width: min(80%,300px);  
     outline: 1px solid red;
     margin: 0 auto;
 }
+
+/*for tablets*/
+@media screen and (min-width: 480px) {
+    .container {
+        max-width: 480px;
+        outline: 2px solid yellow;
+    }
+}
+/*for desktop screens, max midth for large screen*/
+@media screen and (min-width: 769px) {
+    .container {
+        width: 80%;
+        max-width: 1025px;
+        outline: 2px solid green;
+    }
+}
+
 
 
 /* Header */
@@ -113,7 +132,11 @@ body {
     display: none;
 }
 
-
+@media only screen and (min-width: 769px) {
+    .header__nav__itm {
+        display: inherit; 
+    }
+}
 
 
 /*   */
@@ -151,7 +174,7 @@ body {
     height: 100px;    /*revoir la taille en fonction du parent, pour avoir quelque chose en tablette*/
     width: 235px;
     overflow: hidden;
-    background: var(--blue);
+    background-color: var(--blue);
     border-radius: .75rem;
     display: flex;
     align-items: center;
@@ -159,6 +182,17 @@ body {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
 }
 
+/* .tile:nth-child(2) {
+    background-color: var(--magenta-pink);
+} */
+
+.block__section__list__itm:nth-of-type(2) .tile {
+    background-color: var(--magenta-pink);
+}
+
+.block__section__list__itm:nth-of-type(3) .tile {
+    background-color: var(--yellow-amber);
+}
 
 
 .tile__right {
@@ -188,3 +222,7 @@ body {
     text-align: center;
     /* margin: .5rem; */
 }
+
+
+
+
