--- a/home_style.css
+++ b/home_style.css
@@ -88,8 +88,8 @@ body {
 /*for desktop screens, max midth for large screen*/
 @media screen and (min-width: 769px) {
     .container {
-        width: 80%;
-        max-width: 1025px;
+        /* width: min(80%,1280px); */
+        max-width: 1280px;
         outline: 2px solid green;
     }
 }
@@ -108,6 +108,7 @@ body {
     position: sticky;
     top: 0;
     z-index: 100;
+    /* width: 100vw; */
 }
 
 .header__brand {
@@ -145,10 +146,36 @@ body {
 
 /*   */
 
+
+.block__section {
+    margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 769px) {
+    .block__section {
+        margin-left: 2rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 6rem;
+    }
+}
+
 .block__section__list {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+@media screen and (min-width: 769px) {
+    .block__section__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        gap: 3rem;
+        /* align-items: center; */
+        /* justify-content: center; */
+    }
 }
 
 
@@ -160,6 +187,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+@media screen and (min-width: 769px) {
+    .block__section__list__itm--wrapper {
+        gap: 2rem;
+    }
 }
 
 .block__section__list__itm__title {
@@ -181,8 +214,20 @@ body {
     display: flex;
     /* align-items: center; */
     /* justify-content: space-around; */
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: transform 0.3s;
+    transform: translate3d(0 -1px 0); 
 }
+
+@media screen and (min-width: 769px) {
+    .tile:hover {
+        transition: transform 0.3s;
+        transform: translate3d(0, -5px, 0);
+        scale: 1.050;
+    }
+}
+
+
 
 /*color of tiles*/
 
@@ -235,5 +280,11 @@ body {
 }
 
 
-
+@media screen and (min-width: 729px) {
+    .tile__left__img:hover {
+        /* scale: 1.025; */
+        transition: transform 0.3s;
+        transform: scale(1.5);
+    }
+}
 
