--- a/home_style.css
+++ b/home_style.css
@@ -283,8 +283,38 @@ body {
 @media screen and (min-width: 729px) {
     .tile__left__img:hover {
         /* scale: 1.025; */
-        transition: transform 0.3s;
+        transition: transform 0.3s ease-in;
         transform: scale(1.5);
     }
+
+    .tile__left__img:not(:hover) {
+        /* scale: 1.025; */
+        transition: transform 0.3s ease-out;
+        transform: scale(1);
+    }
+}
+
+
+
+/*swiper*/
+
+.swiper {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+}
+
+.swiper-slide {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--blue);
+    border-radius: .75rem;
+}
+
+.swiper-button-prev, .swiper-button-next {
+    color: white;
 }
 
