--- a/home_style.css
+++ b/home_style.css
@@ -40,6 +40,7 @@
 :root {
     /*colors*/
     color: #FFFFFF;
+    font-size : 16px;
     --background-color: #101728;
     --blue: rgba(55, 62, 230, 0.58);
     --magenta-pink: rgba(207, 62, 166, 1);
@@ -97,18 +98,20 @@ body {
 
 
 /* Header */
-
 .header {
+    background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.12) 100%);
+}
+
+.header__wrapper {
     padding: 0.75rem 0.5rem;
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.12) 100%);
+    max-width: 1280px;
     position: sticky;
-    top: 0;
+    top: 0; 
     z-index: 100;
-    /* width: 100vw; */
 }
 
 .header__brand {
@@ -288,7 +291,6 @@ body {
     }
 
     .tile__left__img:not(:hover) {
-        /* scale: 1.025; */
         transition: transform 0.3s ease-out;
         transform: scale(1);
     }
@@ -315,6 +317,21 @@ body {
     align-items: center;
     background-color: var(--blue);
     border-radius: .75rem;
+}
+
+
+
+.swiper-theme-link {
+    height: 100%;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*for dev puposes*/
+.swiper-theme-link:hover {
+    color: red;
 }
 
 @media screen and (min-width: 729px) {
