--- a/home_style.css
+++ b/home_style.css
@@ -108,7 +108,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1280px;
+    max-width: 1420px;
     position: sticky;
     top: 0; 
     z-index: 100;
@@ -299,24 +299,33 @@ body {
 
 
 /*swiper*/
-
+/*overflow issue -> https://stackoverflow.com/questions/42908632/display-element-outside-of-overflow-hidden-in-swiper-slider*/
 .swiper {
     width: 100%;
     max-width: 1100px;
-    height: 100px;
+    /* height: 100px; */
     margin-bottom: 3rem;
     margin-top: 1rem;
-    /* overflow-y: inherit;
-    overflow-x: inherit; */
+    overflow: visible;
+    /* overflow-y: inherit; */
+    /* overflow-x: hidden; */
+}
+
+.swiper-wrapper {
+    /* overflow-y: visible; */
+    /* overflow-x: hidden; */
 }
 
 .swiper-slide {
     text-align: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* gap:  */
+    /*justify-content: center;
+    align-items: center; */
     background-color: var(--blue);
     border-radius: .75rem;
+    padding: 5rem;
+    /* padding-top: 3rem; */
 }
 
 
