--- a/css/home_style.css
+++ b/css/home_style.css
@@ -31,7 +31,7 @@
 
 @font-face {
     font-family: "Lato";
-    src: url(fonts/Lato-Regular.ttf) format("truetype");
+    src: url("/fonts/Lato-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
