--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,51 @@
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Bold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Italic.ttf") format("truetype");
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-BoldItalic.ttf") format("truetype");
+    font-weight: bold;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Nunito";
+    src: url("/fonts/static/Nunito-Black.ttf") format("truetype");
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Lato";
+    src: url("/fonts/Lato-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+
 :root {
-    font-size: 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --background-color:#3D3D3D;
-    --green: #47E060;
-    --text-color: #FFFFFF;
+    color: #FFFFFF;
+    font-size : 16px;
+    --background-color: #101728;
+    --blue: rgba(56, 62, 230, 0.58);
+    --dark-blue:rgba(31, 37, 120, 1); 
+    --magenta-pink: rgba(207, 62, 166, 1);
+    --yellow-amber: rgba(255, 190, 11, 1);
 
 }
 
@@ -27,7 +69,7 @@ li {
 
 body {
     background-color: var(--background-color);
-    color: var(--text-color);
+    font-family: "Nunito";
 }
 
 .header {
@@ -73,7 +115,7 @@ body {
 
 /* PLAYER SECTION */
 
-#player {
+.section-player {
     position: relative;
     display: flex;
     flex-direction: column;
