--- a/css/home_style.css
+++ b/css/home_style.css
@@ -104,6 +104,7 @@ body {
 /* Header */
 .header {
     background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.12) 100%);
+    backdrop-filter: blur(10px);
     position: sticky;
     top: 0; 
     z-index: 1000;
