--- a/css/home_style.css
+++ b/css/home_style.css
@@ -231,6 +231,7 @@ body {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     transition: transform 0.3s;
     transform: translate3d(0 -1px 0);
+    will-change: transform;
 }
 
 @media screen and (min-width: 769px) {
@@ -238,6 +239,7 @@ body {
         transition: transform 0.3s;
         transform: translate3d(0, -5px, 0);
         scale: 1.050;
+        will-change: transform;
     }
 }
 
