--- a/css/home_style.css
+++ b/css/home_style.css
@@ -159,14 +159,14 @@ body {
 
 /*  block section */
 
-
-.block__section {
+.block {
     margin-bottom: 2rem;
-    /* position: relative; */
+    display: flex;
+    flex-direction: column;
 }
 
 @media screen and (min-width: 769px) {
-    .block__section {
+    .block {
         /* margin-left: 2rem; */
         display: flex;
         flex-direction: row;
@@ -175,14 +175,14 @@ body {
     }
 }
 
-.block__section__list {
+.block__list {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
 @media screen and (min-width: 769px) {
-    .block__section__list {
+    .block__list {
         flex-direction: row;
         flex-wrap: wrap;
 
@@ -193,30 +193,39 @@ body {
 }
 
 
-.block__section__title {
+.block__title {
     text-transform: uppercase;
     position: relative;
 }
 
-.block__section__list__itm--wrapper {
+.block__content {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 @media screen and (min-width: 769px) {
-    .block__section__list__itm--wrapper {
+    .block__content {
         gap: 2rem;
     }
 }
 
-.block__section__list__itm__title {
+.block__item--title {
     font-size: 4.8rem;
     /* font-family: Lato; */
     margin-top: 1.8rem;
     margin-bottom: 1rem;
 }
 
+/*color of tiles*/
+
+.block__item:nth-of-type(2) .tile {
+    background-color: var(--magenta-pink);
+}
+
+.block__item:nth-of-type(3) .tile {
+    background-color: var(--yellow-amber);
+}
 
 
 
@@ -247,15 +256,6 @@ body {
 
 
 
-/*color of tiles*/
-
-.block__section__list__itm:nth-of-type(2) .tile {
-    background-color: var(--magenta-pink);
-}
-
-.block__section__list__itm:nth-of-type(3) .tile {
-    background-color: var(--yellow-amber);
-}
 
 
 /*Content of tiles*/
