when sign-in not successful, redirect with sign-in tab open

--- a/css/home_style.css
+++ b/css/home_style.css
@@ -525,6 +525,18 @@ body {
 
 
 
+/*icons*/
+
+.back-icon {
+    color: white;
+    font-size: 12rem;
+}
+
+
+
+
+
+
 .elipse {
     position: absolute;
     width: 298px;
